# hpmeshgen

./: CMakeLists.txt  HPMeshGenParameter.txt  LICENSE  README.md
meshes/: fort_bahamas.15
src/: CMakeLists.txt  MeshHeader.h
src/Blossom5/: CMakeLists.txt
src/Contour/: CMakeLists.txt  ContourType.h  Edge.h  Point.h  Shape.cpp  Shape.h  Types.h
src/DMO/: CMakeLists.txt  DMO_PUBLIC.h  DmoMesh.h  DmoParams.h  Metrics.h  Solver.h  UniformGrid.h  Vertex.h  gpuErrchk.h  kernel.cu
src/GridEvaluation/: CMakeLists.txt  VtkWriter.cpp  VtkWriter.h  eval.cpp  eval.h
src/HPMeshGen2/: BsgGenerator.cpp  BsgGenerator.h  CMakeLists.txt  Config.cpp  Config.h  DepthField.h  HelperFunctions.h  MeshFunctions.h  SignedDistanceFunction.cpp  SignedDistanceFunction.h  Simplificator.cpp  Simplificator.h  Simplify.h  SizeField.h  TriRemeshing.cpp  TriRemeshing.h  TriangleCluster.cpp  TriangleCluster.h  baseDirectory.h.in  blossom_quad.cpp  blossom_quad.h  graph_classes.h  main.cpp  resource.h  svg.h
src/HPMeshGen2/BlockStructuredGrid/: BlockStructuredGrid.cpp  BlockStructuredGrid.h  BlockStructuredTriangleGrid.cpp  BlockStructuredTriangleGrid.h
src/HPMeshGen2/MeshSmoothing/: DiscreteMeshOptimization.cu  PointSmoothing.h  QualityMetrics.h
src/HPMeshGen2/OceanMesh/: OceanMesh.cpp  OceanMesh.h
src/InputFileReader/: CMakeLists.txt  InputFileReader.cpp  InputFileReader.h
src/RatRace/: CMakeLists.txt  DualHybridGraph.cpp  DualHybridGraph.h  RatRace.cpp  RatRace.h
src/ScalarField/: CMakeLists.txt  ScalarField.cpp  ScalarField.h
src/Stopwatch/: CMakeLists.txt  Stopwatch.cpp  Stopwatch.h
